# clang-memcheck

./: .gitignore  CMakeLists.txt  GitHub.url  README.md  build.sh
src/: MemCheck.cpp
tests/: alias.c  check_function_pass.c  double_free.c  leak.c  okay.c  overwrite_mem.c  reallocate.c  ret_ptr.c  use_after_free_deref.c  use_after_free_index.c
